# job-finder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER-CHECKLIST.md  DOCKER-QUICKREF.md  DOCKER-SETUP-SUMMARY.md  DOCKER.md  IMPLEMENTATION_ROADMAP.md  Makefile  PHASES_4-7_SUMMARY.md  README.md  app_spec.md  debug_agent.py  docker-compose.override.yml.example  docker-compose.yml  docker-setup.bat  docker-setup.sh  fastapi-cloud.yml  main.py  pyproject.toml  render.yaml  start.sh
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-playwright-mcp.yml
.serena/: project.yml
backend/: Dockerfile  Dockerfile.render  agent.py  analytics.py  applications.py  apply_agent.py  auth.py  bookmarks.py  cache.py  comparison.py  cover_letters.py  db.py  diag.py  diag_apply.py  email_service.py  integrations.py  interviews.py  jobs.db  main.py  mcp_server.py  profile_api.py  query_parser.py  rate_limit.py  resume.py  salary.py  scoring.py  search_tools.py  searches.py  skills.py  test_agent.py  webhooks.py
deploy/playwright-mcp/: Dockerfile  README.md  deploy-cloudrun.sh  fly.toml  server.mjs
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Dashboard.jsx  auth.jsx  index.css
frontend/src/components/: ApplicationStatus.jsx  CommandPalette.jsx  ExportButton.jsx  ThemeToggle.jsx  Toast.jsx  UserMenu.jsx
frontend/src/components/profile/: ProfileForms.jsx
frontend/src/hooks/: useDarkMode.js
frontend/src/pages/: Analytics.jsx  Login.jsx  Onboarding.jsx  Profile.jsx  Register.jsx  ResumeOptimizer.jsx  Settings.jsx
